--- a/gymHouse/personas/templates/admin_select_days_alumnos.html
+++ b/gymHouse/personas/templates/admin_select_days_alumnos.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles_menu-celu.css' %}">
     <link rel="stylesheet" href="{% static 'css/styles_admin-cambiarplanes.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles_admin_alumnos.css' %}">
-
+    <link rel="stylesheet" type="text/css" href="{% static 'css/stylesPerfil.css' %}">
+    <script src="{% static 'js/sectionProfile.js' %}"></script>
     <title>Gym House: Alumnos</title>
 </head>
 <body>
@@ -116,9 +117,13 @@
         {% for person in personas %}
         
             <div class="card-info">
-                <figure><img src="{{person.foto_de_perfil}}" alt=""></figure>
+                <figure><img src="{% if person.foto_de_perfil %} {{person.foto_de_perfil.url}} {% else %} {% static 'images/avatar/11.png' %} {% endif %}" alt=""></figure>
                 <div class="pupil_data--name" id="pupil_data--name">
-                    <h1>{{person.apodo}}</h1>
+                    {% if person.apodo %}
+                        <h1>{{person.apodo}}</h1>
+                    {% else %}
+                        <p></p>
+                    {% endif %}
                     <h3>{{person.nombre}} {{person.apellido}}</h3>
                     <p>{{person.edad}}</p>
                 </div>
@@ -163,11 +168,11 @@
             {% csrf_token %}
 
             <div class="pop-up--second" id="pop-up--second">
-                {% comment %} <i class="fa-solid fa-xmark"></i> {% endcomment %}
+                
                 <p>Elegí los días y horarios que el alumno va a asistir</p>
                 <ul>
                     {{formsetDays.management_form}}
-                    {% comment %} {{formsetDays}}  {% endcomment %}
+                    
                     {% for f in formsetDays %}
                         <li class="day">
                             <p></p>
@@ -183,35 +188,6 @@
 
                 </ul>
 
-                {% comment %} <ul>
-                    <li class="day selection">
-                        <p>LUN</p>
-                        <div class="custom-num">
-                            <i class="fas fa-angle-up arr-up" id="arr-down"></i>
-                            <input
-                            type="number"
-                            class="num-input"
-                            id="num-imput"
-                            min="14"
-                            max="22"
-                            value="15"/>
-                            <i class="fas fa-angle-down arr-down" id="arr-up"> </i>
-                        </div>
-                        <p class="hs">hs</p>
-                    </li>
-                    <li class="day">
-                        <p>MAR</p>
-                    </li>
-                    <li class="day">
-                        <p>MIÉ</p>
-                    </li>
-                    <li class="day">
-                        <p>JUE</p>
-                    </li>
-                    <li class="day">
-                        <p>VIE</p>
-                    </li>
-                </ul> {% endcomment %}
                 <div class="container_buttons">
                     
                     <button type="button" id="second_button"><p>Finalizar</p></button>
@@ -222,24 +198,7 @@
             <div class="pop-up--third" id="pop-up--third">
                 <h5>¡Plan cambiado exitosamente!</h5>
                 <button type="submit" id="form_close">Salir</button>
-                {% comment %} <div class="plan-changed">
-                    <p>Aron Soto</p>
-                    <p>3 días/semana</p>
-                    <ul>
-                        <li>
-                            <p>Lun</p>
-                            <p>16hs</p>
-                        </li>
-                        <li>
-                            <p>Mié</p>
-                            <p>16hs</p>
-                        </li>
-                        <li>
-                            <p>Jue</p>
-                            <p>16hs</p>
-                        </li>
-                    </ul>
-                </div> {% endcomment %}
+        
             </div>
         </form>    
     </div>
