--- a/gymHouse/personas/templates/alumnos_turnos.html
+++ b/gymHouse/personas/templates/alumnos_turnos.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{% static 'css/styles_menu-celu.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles_alumnos-turnos.css' %}">
     <script src="{% static 'js/sectionProfile.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/stylesPerfil.css' %}">
     
     <title>Gym House: turnos</title>
 </head>
@@ -50,7 +51,83 @@
             </ul>
         </div>
     </nav>
+    <section class="section-profile" id="section-profile">
+        <div id="perfil_bg--blur" class="perfil_bg--blur">
+            <div class="perfil_bg--gradient" id="perfil_bg--gradient">
+                <div class="perfil_bg" id="perfil_bg">
+                    <!-- Perfil minimizado........................................ -->
+                    <div class="navbar--fill" id="navbar--fill"></div> 
+                    <div id="profile" class="profile">
+                        {% if user.foto_de_perfil == None %}
+                            <div class="profile_data--radiuspic" id="profile_data--radiuspic">
+                                <img src="{% static 'images/avatar/9.png' %}" class="profile_data--pic" id="profile_data--pic">
+                            </div>
+                        {% else %}
+                            <div class="profile_data--radiuspic" id="profile_data--radiuspic">
+                                <img src="{% if user.foto_de_perfil %} {{user.foto_de_perfil.url}} {% else %} {% static 'images/avatar/11.png' %} {% endif %}" class="profile_data--pic" id="profile_data--pic">
+                            </div>
+                        {% endif %}
+                        
+                        <div class="profile_data--name" id="profile_data--name">
+                            <h1>{{user.apodo}}</h1>
+                            {% comment %} <figure></figure> {% endcomment %}
+                            <h3>{{user.nombre}} {{user.apellido}}</h3>
+                            {% if  user.edad != None%}
+                                <p>{{user.edad}} años</p>
+                            {% endif %}
+                            {% comment %} <p>{{user.edad}}</p> {% endcomment %}
+                        </div>
+                        {% if user.biografia %}
+                            <div class="profile_data--description" id="profile_data--description">
+                                <p>{{user.biografia}}</p>
+                            </div>
+                        {% else %}
+                            <br>
+                        {% endif %}
+                        
+                        <div class="profile_data--numbers" id="profile_data--numbers">
+                            <ol>
+                                {% if user.telefono %}
+                                <li>
+                                    <h5>{{user.telefono}}</h5>
+                                    <p>CONTACTO</p>
+                                </li>
+                                {% else %}
+                                    <br>
+                                {% endif %}
 
+                                {% if user.peso %}
+                                <li>
+                                    <h5>{{user.peso}}</h5>
+                                    <p>PESO</p>
+                                </li>
+                                {% else %}
+                                    <br>
+                                {% endif %}
+                                
+                                {% if user.altura %}
+                                <li>
+                                    <h5>{{user.altura}}</h5>
+                                    <p>ALTURA</p>
+                                </li>
+                                {% else %}
+                                    <br>
+                                {% endif %}
+                            </ol>
+                        </div>
+                        <button id="profile_data--button" class="profile_data--button">
+                            <a href="{% url 'personas:perfil' %}">Editar Perfil</a> 
+                        </button>
+                        <a class="botonito" href="{% url 'logout' %}">Salir de la cuenta</a>
+                    </div>
+                    <!-- Fin perfil minimizado........................................ -->
+                </div>
+            </div>
+        </div>
+
+        <div class="aestethical-margin"></div>
+
+    </section>
     <div class="turnos"> <!--este cambie la class-->
         <div class="shifts" id="shifts"><!--este agregué-->
         <div class="shifts_table" id="shifts_table">
@@ -869,7 +946,7 @@
                     </div>            
                 </div>
                 <div class="plan"><p>¿Querés cambiar tu plan?</p></div>
-                <a href="https://wa.me/5493624643544">Cambiar plan</a>
+                <a href="https://wa.me/543624594665">Cambiar plan</a>
             </div>
         
             <div class="window_turno_alumnos" id="window_turno_alumnos">
@@ -884,8 +961,8 @@
         <div class="fill-mediaquery"></div>
     </div>
 
+    <script src="{% static 'js/model.js' %}"></script>
+   
 </body>
-<script src="{% static 'js/model.js' %}">
-    
-</script>
+
 </html>
