--- a/gymHouse/static/css/styles_alumnos-landing.css
+++ b/gymHouse/static/css/styles_alumnos-landing.css
@@ -25,7 +25,7 @@ html{
 body {
     margin: 0;
     padding: 0;
-    background: #fafafa; 
+    background: #fafafad6; 
     font-size: 1em;
     line-height: 1.5em;
 }
@@ -109,21 +109,22 @@ body {
     margin: 1.2rem auto;
 }
 .noticia-sec{
-    height: 22%;
+    height: 25rem;
     width: 29%;
     border-radius: 18px;
     position: relative;
     display: inline-block;
     margin: auto;
     overflow: hidden;
+    /* min-width: 30rem; */
 }
 .noticia-sec img{
-    height: 100%;
+    height: 25rem;
     width: 100%;
     margin: auto;
 }
+
 .titulo-noticiasecundaria{
-    height: 3rem;
     width: 100%;
     position:absolute;
     background:rgba(0, 0, 0, 0.786);
@@ -133,9 +134,9 @@ body {
     color:white;
     font-size: 1.5rem;
     font-family: "raleway medium";
-    display:flex;
-    justify-content: center;
-    margin: 0.75rem auto;
+    padding: 0.8rem;
+    margin:0;
+    text-align: center;
 }
 .landing-noticias-boton{
     width: 24rem;
@@ -181,22 +182,42 @@ body {
     .landing-noticias-boton p{
         font-size: 1.5rem;
     }
+    .noticia-sec{
+        height: 20rem;
+    }
+    .noticia-sec img{
+        height: 20rem;
+    }
+}
+@media (max-width: 900px) {
+    .noticia-sec:nth-child(3){
+        display: none;
+    }
+    .noticia-sec{
+        height: 25rem;
+        width: 45%;
+    }
+    .noticia-sec img{
+        height: 25rem;
+    }
 }
 @media (max-width: 700px) {
     .landing-noticias{
-        margin: 10% 0 6%;
+        margin: 3rem 0;
     }
     .landing h1{
         font-size: 2rem;
         font-family: "raleway medium";
     }
-    .noticia-principal{
+    .noticia-sec:nth-child(2){
+        display: none;
+    }
+    .noticia-sec{
         height: 28rem;
         width: 44rem;
     }
-    .noticia-sec{
-        height: 0px;
-        width: 0px;
+    .noticia-sec img{
+        height: 28rem;
     }
     .landing-noticias-boton{
         width: 25rem;
@@ -206,6 +227,24 @@ body {
     .landing-noticias-boton p{
         font-family: "raleway semibold";
         font-size: 1.6rem;
+    }
+}
+@media (max-width: 550px) {
+    .noticia-sec{
+        height: 20rem;
+        width: 35rem;
+    }
+    .noticia-sec img{
+        height: 20rem;
+    }
+    .landing-noticias-boton{
+        width: 21rem;
+        height: 5rem;
+        border-radius: 20px;
+    }
+    .landing-noticias-boton p{
+        font-family: "raleway semibold";
+        font-size: 1.2rem;
     }
 }
 /*----------------------------------------------------*/
@@ -221,7 +260,7 @@ body {
 }
 /*----------------------------------------------------*/
 @media (max-width: 1024px) {}
-@media (max-width: 700px) {
+@media (max-width: 800px) {
     .landing-ordenar{
         width: 100%;
         display:block;
@@ -259,53 +298,35 @@ body {
     align-content: center;
     margin: auto 20px;
     color:black;
-    /* border: 1px rgb(105, 105, 105) dashed; */
 }
-.ejercicios-sup{
+.ejercicios{
     display: flex;
     justify-content: space-between;
     margin: 10px auto;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
-.ejercicios-inf{
-    display: flex;
-    justify-content: space-between;
-    margin: 10px auto;
-}
-.ejercicios-sup a{
-    height: 25%;
-    width: 19%;
-    background: #cdcdcd;
+.ejercicios a{
+    height: 15rem;
+    width: 32%;
+    background: rgb(255, 255, 255);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
-    /* border: 1px black dashed; */
+    margin: 0.5rem;
 }
-.ejercicios-inf a{
-    height: 25%;
-    width: 19%;
-    background: #cdcdcd;
-    border-radius: 10px;
-    /* border: 1px black dashed; */
-}
-.ejercicios-sup a img{
-    width: 80%;
-    display:flex;
-    align-content: center;
-    margin: auto;
-    padding-top: 24px;
-}
-.ejercicios-inf a img{
-    width: 80%;
-    display:flex;
-    align-content: center;
-    margin: auto;
-    padding-top: 24px;
-}
-.ejercicios-sup a p{
+.ejercicios a h1{
     font-family: "raleway bold";
-    font-size: 1.6rem;
+    font-size: 2rem;
     text-align: center;
     color:black;
 }
-.ejercicios-inf a p{
+.ejercicios a img{
+    width: 6rem;
+    display:flex;
+    align-content: center;
+    margin: auto;
+}
+.ejercicios a p{
     font-family: "raleway bold";
     font-size: 1.6rem;
     text-align: center;
@@ -313,50 +334,42 @@ body {
 }
 
 /*----------------------------------------------------*/
-@media (max-width: 1100px) {
-    .ejercicios-titulo{
-        height: 40px;
+@media (max-width: 1200px) {
+    .ejercicios a{
+        width: 31%;
     }
-    .ejercicios-titulo p{
-        font-size: 1.8rem;
+}
+@media (max-width: 800px) {
+    .landing-ejercicios{
+        width: 100%;
+        margin: 3% 0 0 0;
     }
-    .ejercicios-sup a p{
-        font-size: 1.4rem;
+    .ejercicios a{
+        width: 30%;
     }
-    .ejercicios-inf a p{
+    .ejercicios a h1{
+        font-size: 1.9rem;
+    }
+    .ejercicios a p{
         font-size: 1.4rem;
     }
 }
-@media (max-width: 700px) {
-    .landing-ejercicios{
-        width: 100%;
+@media (max-width: 550px) {
+    .ejercicios a{
+        height: 12rem;
+        width: 31%;
+        min-width: 8rem;
+        margin: 0.5rem 0.2rem;
     }
-    .landing-ejercicios a{
-        text-decoration: none;
+    .ejercicios a h1{
+        font-size: 1.2rem;
     }
-    .ejercicios-titulo{
-        height: 45px;
+    .ejercicios a img{
+        width: 5rem;
     }
-    .ejercicios-titulo p{
-        font-size: 2rem;
-        font-family: "raleway bold" ;
-    }
-    .vuelan{
-        display: none;
-    }
-    .ejercicios-sup a{
-        height: 30%;
-        width: 32%;
-    }
-    .ejercicios-inf a{
-        height: 30%;
-        width: 32%;
-    }
-    .ejercicios-sup a p{
-        font-size: 1.8rem;
-    }
-    .ejercicios-inf a p{
-        font-size: 1.8rem;
+    .ejercicios a p{
+        font-family: "raleway semibold";
+        font-size: 1rem;
     }
 }
 /*----------------------------------------------------*/
@@ -372,7 +385,7 @@ body {
 
 /*----------------------------------------------------*/
 @media (max-width: 1024px) {}
-@media (max-width: 700px) {
+@media (max-width: 800px) {
     .plan-playlist{
         height: fit-content;
         width:100%;
@@ -516,7 +529,7 @@ body {
         font-size: 1.4rem;
     }
 }
-@media (max-width: 700px) {
+@media (max-width: 800px) {
     .landing-planmensual{
         margin: 6% auto;
     }
