--- a/gymHouse/personas/templates/admin_alumnos.html
+++ b/gymHouse/personas/templates/admin_alumnos.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles_menu.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/styles_menu-celu.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles-admin_navcel.css' %}}">
     <link rel="stylesheet" href="{% static 'css/styles_admin-cambiarplanes.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles_admin_alumnos.css' %}">
-
+    <link rel="stylesheet" type="text/css" href="{% static 'css/stylesPerfil2.css' %}">
+    <script src="{% static 'js/sectionProfile.js' %}"></script>
     <title>Gym House: Alumnos</title>
 </head>
 <body>
@@ -23,9 +24,9 @@
                     </a> 
                 </li> 
                 <li>
-                    <a href="#">
-                        <img src="{% static 'images/user.png' %}">
-                        <p>Perfil</p>
+                    <a href="#" class="show-profile" id="show-profile"> 
+                        <img src="/static/images/user.png"> 
+                        <p>Perfil</p> 
                     </a>
                 </li> 
                 <li> 
@@ -59,45 +60,120 @@
         <ul>
             <li class="list">
                 <a href="{% url 'login_profe' %}">
-                    <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
+                    <span class="icono"><img class="landing" src="{% static 'images/logo.svg' %}"></span>
                     <span class="text">Inicio</span>
                 </a>
             </li>
             <li class="list active">
                 <a href="admin_perfil.html">
-                    <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
+                    <span class="icono"><img src="/static/images/user.png"> </span>
                     <span class="text">Perfil</span>
                 </a>
             </li>
             <li class="list">
                 <a href="{% url 'entrenamiento:ejerciciosAdmin' %}">
-                    <span class="icon"><ion-icon name="chatbubble-outline"></ion-icon></span>
+                    <span class="icono"><img src="{% static 'images/gym/gym.png' %}"></span>
                     <span class="text">Entrenar</span>
                 </a>
             </li>
             <li class="list">
-                <a href="{% url 'posts:noticias' %}">
-                    <span class="icon"><ion-icon name="camera-outline"></ion-icon></span>
+                <a href="{% url 'posts:adminNoticia' %}">
+                    <span class="icono"><img src="{% static 'images/edit.png' %}"></span>
                     <span class="text">Noticias</span>
                 </a>
             </li>
             <li class="list">
                 <a href="{% url 'personas:adminTurnos' %}">
-                    <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
+                    <span class="icono"><img src="{% static 'images/calendar.png' %}"></span>
                     <span class="text">Turnos</span>
                 </a>
             </li>
             <li class="list">
                 <a href="{% url 'personas:adminAlumnos' %}">
-                    <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
+                    <span class="icono"><img src="{% static 'images/users-alt.png' %}"></span>
                     <span class="text">Alumnos</span>
                 </a>
             </li>
             <div class="indicator"></div>
         </ul>
     </div>
-    <div class="navigation--space" id="navigation--space"></div>
+    <section class="section-profile" id="section-profile">
+        <div id="perfil_bg--blur" class="perfil_bg--blur">
+            <div class="perfil_bg--gradient" id="perfil_bg--gradient">
+                <div class="perfil_bg" id="perfil_bg">
+                    <!-- Perfil minimizado........................................ -->
+                    <div class="navbar--fill" id="navbar--fill"></div> 
+                    <div id="profile" class="profile">
+                        {% if user.foto_de_perfil == None %}
+                            <div class="profile_data--radiuspic" id="profile_data--radiuspic">
+                                <img src="{% static 'images/avatar/9.png' %}" class="profile_data--pic" id="profile_data--pic">
+                            </div>
+                        {% else %}
+                            <div class="profile_data--radiuspic" id="profile_data--radiuspic">
+                                <img src="{% if user.foto_de_perfil %} {{user.foto_de_perfil.url}} {% else %} {% static 'images/avatar/11.png' %} {% endif %}" class="profile_data--pic" id="profile_data--pic">
+                            </div>
+                        {% endif %}
+                        
+                        <div class="profile_data--name" id="profile_data--name">
+                            <h1>{{user.apodo}}</h1>
+                            {% comment %} <figure></figure> {% endcomment %}
+                            <h3>{{user.nombre}} {{user.apellido}}</h3>
+                            {% if  user.edad != None%}
+                                <p>{{user.edad}} años</p>
+                            {% endif %}
+                            {% comment %} <p>{{user.edad}}</p> {% endcomment %}
+                        </div>
+                        {% if user.biografia %}
+                            <div class="profile_data--description" id="profile_data--description">
+                                <p>{{user.biografia}}</p>
+                            </div>
+                        {% else %}
+                            <br>
+                        {% endif %}
+                        
+                        <div class="profile_data--numbers" id="profile_data--numbers">
+                            <ol>
+                                {% if user.telefono %}
+                                <li>
+                                    <h5>{{user.telefono}}</h5>
+                                    <p>CONTACTO</p>
+                                </li>
+                                {% else %}
+                                    <br>
+                                {% endif %}
 
+                                {% if user.peso %}
+                                <li>
+                                    <h5>{{user.peso}}</h5>
+                                    <p>PESO</p>
+                                </li>
+                                {% else %}
+                                    <br>
+                                {% endif %}
+                                
+                                {% if user.altura %}
+                                <li>
+                                    <h5>{{user.altura}}</h5>
+                                    <p>ALTURA</p>
+                                </li>
+                                {% else %}
+                                    <br>
+                                {% endif %}
+                            </ol>
+                        </div>
+                        <button id="profile_data--button" class="profile_data--button">
+                            <a href="{% url 'personas:perfil' %}">Editar Perfil</a> 
+                        </button>
+                        <a class="botonito" href="{% url 'logout' %}">Salir de la cuenta</a>
+                    </div>
+                    <!-- Fin perfil minimizado........................................ -->
+                </div>
+            </div>
+        </div>
+
+        <div class="aestethical-margin"></div>
+
+    </section>
     {% comment %} <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script> {% endcomment %}
     {% comment %} <script src="https://kit.fontawesome.com/1169c95eac.js" crossorigin="anonymous"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
@@ -116,25 +192,44 @@
         {% for person in personas %}
         
             <div class="card-info">
-                <figure><img src="{% if person.foto_de_perfil %} {{person.foto_de_perfil}} {% else %} {% static 'images/avatar/11.png' %} {% endif %}" alt=""></figure>
+                <figure><img src="{% if person.foto_de_perfil %} {{person.foto_de_perfil.url}} {% else %} {% static 'images/avatar/11.png' %} {% endif %}" alt=""></figure>
                 <div class="pupil_data--name" id="pupil_data--name">
-                    <h1>{{person.apodo}}</h1>
+                    {% if person.apodo %}
+                        <h1>{{person.apodo}}</h1>
+                    {% else %}
+                        <p></p>
+                    {% endif %}
+                    
                     <h3>{{person.nombre}} {{person.apellido}}</h3>
                     <p>{{person.edad}}</p>
                 </div>
                 <ol class="pupil_data--numbers" id="pupil_data--numbers">
-                    <li>
-                        <h5>{{person.altura}}</h5>
-                        <p>ALTURA</p>
-                    </li>
-                    <li>
-                        <h5>{{person.telefono}}</h5>
-                        <p>CONTACTO</p>
-                    </li>
-                    <li>
-                        <h5>{{person.peso}}</h5>
-                        <p>PESO</li>
-                    </li>
+                    {% if person.altura %}
+                        <li>
+                            <h5>{{person.altura}}</h5>
+                            <p>ALTURA</p>
+                        </li>
+                    {% else %}
+                        <p></p>
+                    {% endif %}
+                    {% if  person.telefono %}
+                    
+                        <li>
+                            <h5>{{person.telefono}}</h5>
+                            <p>CONTACTO</p>
+                        </li>
+                    {% else %}
+                        <p></p>
+                    {% endif %}
+                    {% if  person.peso %}
+                    
+                        <li>
+                            <h5>{{person.peso}}</h5>
+                            <p>PESO</li>
+                        </li>
+                    {% else %}
+                        <p></p>
+                    {% endif %}
                 </ol>
                 <p class="pupil_plan">{{person.turno_set.all.0}}</p>
                 <ul class="pupil_plan-days">
@@ -188,98 +283,10 @@
                 <button type="submit" id="submit_button"><p>Siguiente</p></button>
                 <a href="{% url 'personas:adminAlumnos' %}" id="data_secondbutton"><p>Atrás</p></a>
             </div>
-
-            {% comment %} <div class="pop-up--first" id="pop-up--first">
-                <i class="fa-solid fa-xmark"></i>
-                <p>Seleccioná el plan del Alumno</p>
-                <div class="container_choices">
-
-                        <input type="radio" name="plan" id="dos_semana" value="2 veces/Semana">
-                        <label for="dos_semana" class="choice">
-                            <h2>2</h2>
-                            <h3>dias/semana</h3>
-                        </label>
-
-                        <input type="radio" name="plan" id="tres_semana" value="3 veces/Semana">
-                        <label for="tres_semana" class="choice">
-                            <h2>3</h2>
-                            <h3>dias/semana</h3>
-                        </label>
-
-                        <input type="radio" name="plan" id="cinco_semana" value="5 veces/Semana">
-                        <label for="cinco_semana" class="choice">
-                            <h2>5</h2>
-                            <h3>dias/semana</h3>
-                        </label>
-
-
-                </div>
-
-                <button id="first_button"><p>Siguiente</p></button>
-                <button id="first_secondbutton"><p>Atrás</p></button>
-            </div>
-
-            <div class="pop-up--second" id="pop-up--second">
-                <i class="fa-solid fa-xmark"></i>
-                <p>Elegí los días y horarios que el alumno va a asistir</p>
-                <ul>
-                    <li class="day selection">
-                        <p>LUN</p>
-                        <div class="custom-num">
-                            <i class="fas fa-angle-up arr-up" id="arr-down"></i>
-                            <input
-                            type="number"
-                            class="num-input"
-                            id="num-imput"
-                            min="14"
-                            max="22"
-                            value="15"/>
-                            <i class="fas fa-angle-down arr-down" id="arr-up"> </i>
-                        </div>
-                        <p class="hs">hs</p>
-                    </li>
-                    <li class="day">
-                        <p>MAR</p>
-                    </li>
-                    <li class="day">
-                        <p>MIÉ</p>
-                    </li>
-                    <li class="day">
-                        <p>JUE</p>
-                    </li>
-                    <li class="day">
-                        <p>VIE</p>
-                    </li>
-                </ul>
-                <button id="second_button"><p>Finalizar</p></button>
-                <button id="second_secondbutton"><p>Atrás</p></button>
-            </div>
-
-            <div class="pop-up--third" id="pop-up--third">
-                <i class="fa-solid fa-xmark" id="xmark"></i>
-                <h5>¡Plan cambiado exitosamente!</h5>
-                <div class="plan-changed">
-                    <p>Aron Soto</p>
-                    <p>3 días/semana</p>
-                    <ul>
-                        <li>
-                            <p>Lun</p>
-                            <p>16hs</p>
-                        </li>
-                        <li>
-                            <p>Mié</p>
-                            <p>16hs</p>
-                        </li>
-                        <li>
-                            <p>Jue</p>
-                            <p>16hs</p>
-                        </li>
-                    </ul>
-                </div>
-            </div> {% endcomment %}
         </form>    
     </div>
 
     <script src="{% static 'js/sectionPupils.js' %}"></script>
+    <script src="{% static 'js/model_admin.js' %}"></script>
 </body>
 </html>
