--- a/gymHouse/posts/templates/admin_noticias-crear.html
+++ b/gymHouse/posts/templates/admin_noticias-crear.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" href="{% static 'css/styles_admin_noticias_crear.css' %}"/>
         <link rel="stylesheet" type="text/css" href="{% static 'css/styles_admin_noticias-noticia.css' %}">
         <title>Admin: Noticias - crear noticia</title>
+        <link rel="stylesheet" type="text/css" href="{% static 'css/stylesPerfil.css' %}">
+        <script src="{% static 'js/sectionProfile.js' %}"></script>
     
     </head>
     <body>
@@ -21,7 +23,10 @@
                             <a href="#"> <img class="logo" src="{% static 'images/logo.png' %}"> </a> 
                         </li> 
                         <li>
-                            <a href="#"> <img src="{% static 'images/user.png' %}"> <p>Cuenta</p> </a>
+                            <a href="#" class="show-profile" id="show-profile"> 
+                                <img src="/static/images/user.png"> 
+                                <p>Perfil</p> 
+                            </a>
                         </li> 
                         <li> 
                             <a href="admin_entrenar.html">
@@ -79,7 +84,83 @@
             </ul>
         </div>
         <div class="navigation--space" id="navigation--space"></div>
+        <section class="section-profile" id="section-profile">
+            <div id="perfil_bg--blur" class="perfil_bg--blur">
+                <div class="perfil_bg--gradient" id="perfil_bg--gradient">
+                    <div class="perfil_bg" id="perfil_bg">
+                        <!-- Perfil minimizado........................................ -->
+                        <div class="navbar--fill" id="navbar--fill"></div> 
+                        <div id="profile" class="profile">
+                            {% if user.foto_de_perfil == None %}
+                                <div class="profile_data--radiuspic" id="profile_data--radiuspic">
+                                    <img src="{% static 'images/avatar/9.png' %}" class="profile_data--pic" id="profile_data--pic">
+                                </div>
+                            {% else %}
+                                <div class="profile_data--radiuspic" id="profile_data--radiuspic">
+                                    <img src="{% if user.foto_de_perfil %} {{user.foto_de_perfil.url}} {% else %} {% static 'images/avatar/11.png' %} {% endif %}" class="profile_data--pic" id="profile_data--pic">
+                                </div>
+                            {% endif %}
+                            
+                            <div class="profile_data--name" id="profile_data--name">
+                                <h1>{{user.apodo}}</h1>
+                                {% comment %} <figure></figure> {% endcomment %}
+                                <h3>{{user.nombre}} {{user.apellido}}</h3>
+                                {% if  user.edad != None%}
+                                    <p>{{user.edad}} años</p>
+                                {% endif %}
+                                {% comment %} <p>{{user.edad}}</p> {% endcomment %}
+                            </div>
+                            {% if user.biografia %}
+                                <div class="profile_data--description" id="profile_data--description">
+                                    <p>{{user.biografia}}</p>
+                                </div>
+                            {% else %}
+                                <br>
+                            {% endif %}
+                            
+                            <div class="profile_data--numbers" id="profile_data--numbers">
+                                <ol>
+                                    {% if user.telefono %}
+                                    <li>
+                                        <h5>{{user.telefono}}</h5>
+                                        <p>CONTACTO</p>
+                                    </li>
+                                    {% else %}
+                                        <br>
+                                    {% endif %}
+
+                                    {% if user.peso %}
+                                    <li>
+                                        <h5>{{user.peso}}</h5>
+                                        <p>PESO</p>
+                                    </li>
+                                    {% else %}
+                                        <br>
+                                    {% endif %}
+                                    
+                                    {% if user.altura %}
+                                    <li>
+                                        <h5>{{user.altura}}</h5>
+                                        <p>ALTURA</p>
+                                    </li>
+                                    {% else %}
+                                        <br>
+                                    {% endif %}
+                                </ol>
+                            </div>
+                            <button id="profile_data--button" class="profile_data--button">
+                                <a href="{% url 'personas:perfil' %}">Editar Perfil</a> 
+                            </button>
+                            <a class="botonito" href="{% url 'logout' %}">Salir de la cuenta</a>
+                        </div>
+                        <!-- Fin perfil minimizado........................................ -->
+                    </div>
+                </div>
+            </div>
     
+            <div class="aestethical-margin"></div>
+    
+        </section>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <script src="https://kit.fontawesome.com/1169c95eac.js" crossorigin="anonymous"></script>
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
@@ -89,47 +170,43 @@
         <!-- fin del menú -->
 
         <div class="wrapper_noticias">
-            <div class="noticias-crearnoticia">
-                
-                <a class="turnback" src=""><!--agregar link-->
-                    <img src="assets/images/turn-back.png">
-                </a>
-    
-                <form action="" method="POST" class="crearnoticia" id="form_crear_noticia" enctype="multipart/form-data">
-                    {% comment %} {{form}} {% endcomment %}
-                    {% csrf_token %}
-                    <div class="imagen">
-                        <div class="imagen-subir">
-                            <label for="myfile"><p>insertar imagen</p></label>
-                            {% comment %} <input type="file" id="myfile" name="foto" accept="image/*"> {% endcomment %}
-                            <input type="file" name="foto" id="myfile">
-                            
-                        </div>
+      
+            <a class="turnback" src=""><!--agregar link-->
+                <img src="{% static 'images/turn-back.png' %}">
+            </a>
+
+            <form action="" method="POST" class="crearnoticia" id="form_crear_noticia" enctype="multipart/form-data">
+                {% comment %} {{form}} {% endcomment %}
+                {% csrf_token %}
+                <div class="imagen">
+                    <div class="imagen-subir">
+                        <label for="myfile"><p>insertar imagen</p></label>
+                        {% comment %} <input type="file" id="myfile" name="foto" accept="image/*"> {% endcomment %}
+                        <input type="file" name="foto" id="myfile">
+                        
                     </div>
-                    <div class="texto">
-                        <div class="texto-titulo">
-                            <input type="text" placeholder="Ingresar titulo" name="titulo">
-                        </div>
-                        <div class="texto-contenido">
-                            <textarea name="texto" placeholder="Escribe tu noticia" form="form_crear_noticia" ></textarea>            
-                        </div>
+                </div>
+                <div class="texto">
+                    <div class="texto-titulo">
+                        <input type="text" placeholder="Ingresar titulo" name="titulo">
                     </div>
-                    <div class="formato">
-                        <div class="botones">
-                            <button type="submit"class="publicar">
-                                <p>Publicar noticia</p>
-                            </button>
-                            <button class="descartar">
-                                <a href="{% url 'posts:adminNoticia' %}">Descartar</a><!--agregar link-->
-                            </button>
-                        </div>
+                    <div class="texto-contenido">
+                        <textarea name="texto" placeholder="Escribe tu noticia" form="form_crear_noticia" ></textarea>            
                     </div>
+                </div>
+                <div class="formato">
+                    <div class="botones">
+                        <button type="submit"class="publicar">
+                            <p>Publicar noticia</p>
+                        </button>
+                        <button class="descartar">
+                            <a href="{% url 'posts:adminNoticia' %}">Descartar</a><!--agregar link-->
+                        </button>
+                    </div>
+                </div>
                 
-                
+            </form>
             
-                    
-                </form>
-            </div>
         </div>
 
 
