--- a/gymHouse/static/css/styles_admin_alumnos.css
+++ b/gymHouse/static/css/styles_admin_alumnos.css
@@ -66,7 +66,7 @@ body{
 /*Boton de inscripcion*/
 
 .register-pupil{
-    width: 100vw;
+    /* width: 100vw; */
     padding: 0 0 0 8rem;
     margin: auto;
     height: 12rem;
@@ -100,7 +100,7 @@ body{
 
 /*Cards de los alumnos-----------------------------------------------------*/
 .cards-container{
-    width: 100vw;
+    /* width: 100vw; */
     padding: 0 0 0 8rem;
     display: flex;
     flex-direction: row;
@@ -136,6 +136,7 @@ body{
     border-radius: 50%;
     padding: 0.8rem;
 }
+
 
 /*Apodo-Nombre-Edad (Card)----------*/
 .pupil_data--name{
