--- a/gymHouse/static/css/styles_admin_entrenar-historial.css
+++ b/gymHouse/static/css/styles_admin_entrenar-historial.css
@@ -47,7 +47,7 @@ body {
     max-width: 110rem;
     background: #b8b4ff;
     border-radius: 32px;
-
+    overflow: hidden;
     margin: 2rem auto;
 }
 
@@ -57,6 +57,8 @@ body {
     width: 40%;
     height: fit-content;
     margin: 0 auto;
+    display: flex;
+    flex-flow: column;
     /* border: 1px #000000 solid; */
 }
 .pickdate div{
